Fixed collapsable sections transitions

--- a/css/callum_anderson.css
+++ b/css/callum_anderson.css
@@ -38,7 +38,7 @@ nav {
   display: none;
   position: absolute;
   background-color: #f1f1f1;
-  width: 100%;
+  width: 90%;
   overflow: auto;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -61,6 +61,12 @@ section p, ul {
 }
 img {
   margin: 5% auto;
+}
+.blog-panel {
+  max-height: 2000px;
+  overflow: hidden;
+  transition: max-height 0.4s ease-out;
+  -webkit-transition: max-height 0.4s ease-out;
 }
 .blog-post {
   cursor: pointer;
@@ -87,25 +93,24 @@ img {
   z-index: 3;
   padding-top: 10px;
   opacity: 1;
-  transition: opacity 1s;
 }
 .img-modal-content {
   max-height: 90vh;
-  max-width: 90%;
-  margin: 0 auto;
-  /* -webkit-animation-name: zoom;
-  -webkit-animation-duration: 0.5s;
-  animation-name: zoom;
-  animation-duration: 0.5s; */
 }
-/* @-webkit-keyframes zoom {
+.zoomin {
+  -webkit-animation-name: zoomin;
+  -webkit-animation-duration: 0.5s;
+  animation-name: zoomin;
+  animation-duration: 0.5s;
+}
+@-webkit-keyframes zoomin {
   from {-webkit-transform:scale(0)}
   to {-webkit-transform:scale(1)}
 }
-@keyframes zoom {
+@keyframes zoomin {
   from {transform:scale(0)}
   to {transform:scale(1)}
-} */
+}
 .img-modal-close {
   position: absolute;
   top: 15px;
@@ -119,6 +124,11 @@ img {
   color: white;
   text-decoration: none;
   cursor: pointer;
+}
+.img-container {
+  height: 750px;
+  width: 1000px;
+  margin: auto;
 }
 section > a {
   position: relative;
@@ -135,14 +145,13 @@ section > h4:hover {
   background-color: #ddd;
   border: 1px solid black;
 }
-article {
-  max-height: 2000px;
-  transition: max-height 1s;
-}
 .collapser {
   position: absolute;
   top: 0.8em;
   right: 2em;
+}
+.collapsed {
+  max-height: 0;
 }
 q {
   display: block;
